feat: makes button click call specific command

--- a/src/main/resources/Common/UI/Custom/Pages/commands.html
+++ b/src/main/resources/Common/UI/Custom/Pages/commands.html
@@ -11,7 +11,7 @@
             <div class="cmd-name" data-hyui-tooltiptext="{{$desc}}" style="layout-mode: Middle; font-size: 80px;">/{{$name}}</div>
           </div>
           <div style="layout-mode: Right;">
-            <button id="run-button" data-hyui-tooltiptext="Run /{{$name}} command">Run</button>
+            <button id="{{$name}}" data-hyui-tooltiptext="Run /{{$name}} command">Run</button>
           </div>
         </div>
         {{/each}}
