--- a/src/main/resources/Common/UI/Custom/Pages/commands.html
+++ b/src/main/resources/Common/UI/Custom/Pages/commands.html
@@ -43,10 +43,10 @@
           <div style="anchor-height: 20;"></div>
           <div class="row" style="layout-mode: Left;">
             <div style="layout-mode: Middle;">
-              <p style="layout-mode: Middle;">Hide Commands Hud</p>
+              <p style="layout-mode: Middle;">Show Commands Hud</p>
             </div>
             <div style="anchor-width: 10;"></div>
-            <input type="checkbox" id="hide-hud" checked data-hyui-flexweight="1"/>
+            <input type="checkbox" id="show-hud-checkbox" data-hyui-flexweight="1"/>
             <div style="anchor-width: 10;"></div>
           </div>
           <div style="anchor-height: 20;"></div>
