chore: creates empty commands hud message

--- a/src/main/resources/Common/UI/Custom/Huds/quick-command-hud.html
+++ b/src/main/resources/Common/UI/Custom/Huds/quick-command-hud.html
@@ -4,6 +4,11 @@
             {{#each playerCommands}}
             <p id="{{$slot}}">Slot {{$slot}} -> /{{$command}}</p>
             {{/each}}
+            {{#if !playerCommands}}
+            <p style="white-space: wrap">You haven't registered any commands yet.</p>
+            <p style="white-space: wrap">Use /cmd to start setting up your shortcuts!</p>
+            {{/if}}
         </div>
+
     </div>
 </div>
