chore: makes HUD visibility state persistent when saving commands

--- a/src/main/resources/Common/UI/Custom/Huds/quick-command-hud.html
+++ b/src/main/resources/Common/UI/Custom/Huds/quick-command-hud.html
@@ -5,8 +5,8 @@
             <p id="{{$slot}}">Slot {{$slot}} -> /{{$command}}</p>
             {{/each}}
             {{#if !playerCommands}}
-            <p style="white-space: wrap">You haven't registered any commands yet.</p>
-            <p style="white-space: wrap">Use /cmd to start setting up your shortcuts!</p>
+            <p style="white-space: wrap;">You haven't registered any commands yet.</p>
+            <p style="white-space: wrap;">Use /cmd to start setting up your shortcuts!</p>
             {{/if}}
         </div>
 
