--- a/src/main/resources/Common/UI/Custom/Pages/commands.html
+++ b/src/main/resources/Common/UI/Custom/Pages/commands.html
@@ -46,7 +46,7 @@
               <p style="layout-mode: Middle;">Show Commands Hud</p>
             </div>
             <div style="anchor-width: 10;"></div>
-            <input type="checkbox" id="show-hud-checkbox" data-hyui-flexweight="1"/>
+            <input type="checkbox" id="show-hud-checkbox"/>
             <div style="anchor-width: 10;"></div>
           </div>
           <div style="anchor-height: 20;"></div>
