--- a/src/main/resources/Common/UI/Custom/Huds/quick-command-hud.html
+++ b/src/main/resources/Common/UI/Custom/Huds/quick-command-hud.html
@@ -1,4 +1,4 @@
-<div class="container" data-hyui-title="My Quick Commands" style="anchor-width: 250; anchor-height: 270; anchor-left: 10; anchor-top: 20;">
+<div class="container" data-hyui-title="My Quick Commands" style="{{$hudStyle}}">
     <div style="layout-mode: left;">
         <div style="anchor-left: 1; layout-mode: top;">
             {{#each playerCommands}}
@@ -9,6 +9,5 @@
             <p style="white-space: wrap;">Use /cmd to start setting up your shortcuts!</p>
             {{/if}}
         </div>
-
     </div>
 </div>
