feat: adds O as activation mode

--- a/src/main/resources/Common/UI/Custom/Pages/commands.html
+++ b/src/main/resources/Common/UI/Custom/Pages/commands.html
@@ -84,6 +84,17 @@
             </select>
           </div>
 
+          <div class="row" style="layout-mode: Left; anchor-height: 44;">
+            <div style="layout-mode: Middle; anchor-width: 220; anchor-height: 44;">
+              <p style="layout-mode: Middle;">Activation Mode</p>
+            </div>
+            <div data-hyui-flexweight="1"></div>
+            <select id="activation-mode" value="{{$activationMode}}">
+              <option value="CTRL_F">CTRL + F</option>
+              <option value="O_ONLY">O</option>
+            </select>
+          </div>
+
           <div style="anchor-height: 20;"></div>
         </div>
       </div>
