--- a/src/main/resources/Common/UI/Custom/Pages/commands.html
+++ b/src/main/resources/Common/UI/Custom/Pages/commands.html
@@ -2,72 +2,80 @@
   <button id="close-button"
           style="anchor-width: 110; anchor-height: 40; layout-mode: Top; anchor-top: 70; anchor-right: 560;"
           class="secondary-button">
-    Close
+    {{$translations.closeStr}}
   </button>
-  <div class="decorated-container" data-hyui-title="My Commands" style="anchor-height: 850; anchor-width: 800;">
+
+  <div class="decorated-container" data-hyui-title="{{$translations.title}}" style="anchor-height: 850; anchor-width: 800;">
     <div class="container-contents">
-      <input type="hidden" id="currentTab" value="slots" />
+      <input type="hidden" id="currentTab" value="{{$state.currentTab}}" />
       <nav id="easy-commands-tabs" class="tabs"
-           data-tabs="slots:Slots:slots-content,config:Config:config-content"
-           data-selected="slots">
+           data-tabs="slots:{{$translations.slotsStr}}:slots-content,config:{{$translations.configStr}}:config-content"
+           data-selected="{{$state.currentTab}}">
       </nav>
 
       <div id="slots-content" class="tab-content" data-hyui-tab-id="slots">
         <div style="layout-mode: TopScrolling;">
           <div style="anchor-height: 20;"></div>
           <div class="header">
-            <p class="selection-text">Registered Commands for {{$playerName}}</p>
+            <p class="selection-text">{{$translations.registeredCommandsFor}}</p>
           </div>
           <div style="anchor-height: 20;"></div>
 
           {{#each slots}}
           <div class="row" style="layout-mode: Left;">
             <div style="layout-mode: Middle;">
-              <p style="anchor-width: 60; layout-mode: Middle;">Slot {{$item}}</p>
+              <p style="anchor-width: 60; layout-mode: Middle;">{{$translations.slotStr}} {{$item.slotNumber}}</p>
             </div>
             <div style="anchor-width: 10;"></div>
-            <input type="text" id="slot-{{$item}}-input" data-hyui-flexweight="1" />
+            <input type="text" id="{{$item.inputId}}" value="{{$item.value}}" data-hyui-flexweight="1" />
             <div style="anchor-width: 10;"></div>
-            <button id="slot-{{$item}}-button-clear" style="anchor-width: 50;" class="tertiary-button">X</button>
+            <button id="{{$item.clearId}}" style="anchor-width: 50;" class="tertiary-button">X</button>
           </div>
 
           <div style="anchor-height: 30;"></div>
           {{/each}}
+
           <div style="layout-mode: Middle;">
             <button id="save-all-button"
                     style="anchor-width: 200; anchor-height: 40"
                     class="primary-button">
-              SAVE ALL
+              {{$translations.save}}
             </button>
           </div>
         </div>
       </div>
+
       <div id="config-content" class="tab-content" data-hyui-tab-id="config">
         <div style="layout-mode: TopScrolling;">
           <div style="anchor-height: 20;"></div>
 
           <div class="row" style="layout-mode: Left; anchor-height: 44;">
             <div style="layout-mode: Middle; anchor-width: 220; anchor-height: 44;">
-              <p style="layout-mode: Middle;">Show Commands Hud</p>
+              <p style="layout-mode: Middle;">{{$translations.showHudStr}}</p>
             </div>
             <div data-hyui-flexweight="1"></div>
+
+            {{#if state.showHud}}
+            <input type="checkbox" id="show-hud-checkbox" checked />
+            {{else}}
             <input type="checkbox" id="show-hud-checkbox" />
+            {{/if}}
           </div>
 
           <div style="anchor-height: 16;"></div>
 
           <div class="row" style="layout-mode: Left; anchor-height: 44;">
             <div style="layout-mode: Middle; anchor-width: 220; anchor-height: 44;">
-              <p style="layout-mode: Middle;">Commands Hud Position</p>
+              <p style="layout-mode: Middle;">{{$translations.hudPositionStr}}</p>
             </div>
             <div data-hyui-flexweight="1"></div>
-            <select id="hud-position" value="{{$hudPosition}}">
-              <option value="TOP_LEFT">Top Left</option>
-              <option value="TOP_RIGHT">Top Right</option>
-              <option value="CENTER_LEFT">Center Left</option>
-              <option value="CENTER_RIGHT">Center Right</option>
-              <option value="BOTTOM_LEFT">Bottom Left</option>
-              <option value="BOTTOM_RIGHT">Bottom Right</option>
+            <select id="hud-position" value="{{$state.hudPosition}}">
+              <option value="TOP_LEFT">{{$translations.topLeftStr}}</option>
+              <option value="TOP_RIGHT">{{$translations.topRightStr}}</option>
+              <option value="CENTER_LEFT">{{$translations.centerLeftStr}}</option>
+              <option value="CENTER_RIGHT">{{$translations.centerRightStr}}</option>
+              <option value="BOTTOM_LEFT">{{$translations.bottomLeftStr}}</option>
+              <option value="BOTTOM_RIGHT">{{$translations.bottomRightStr}}</option>
             </select>
           </div>
 
@@ -75,21 +83,21 @@
 
           <div class="row" style="layout-mode: Left; anchor-height: 44;">
             <div style="layout-mode: Middle; anchor-width: 220; anchor-height: 44;">
-              <p style="layout-mode: Middle;">Language</p>
+              <p style="layout-mode: Middle;">{{$translations.languageStr}}</p>
             </div>
             <div data-hyui-flexweight="1"></div>
-            <select id="language" value="{{$language}}">
-              <option value="en_US">English (US)</option>
-              <option value="pt_BR">Português (BR)</option>
+            <select id="language" value="{{$state.language}}">
+              <option value="en-US">English (US)</option>
+              <option value="pt-BR">Português (BR)</option>
             </select>
           </div>
 
           <div class="row" style="layout-mode: Left; anchor-height: 44;">
             <div style="layout-mode: Middle; anchor-width: 220; anchor-height: 44;">
-              <p style="layout-mode: Middle;">Activation Mode</p>
+              <p style="layout-mode: Middle;">{{$translations.activationModeStr}}</p>
             </div>
             <div data-hyui-flexweight="1"></div>
-            <select id="activation-mode" value="{{$activationMode}}">
+            <select id="activation-mode" value="{{$state.activationMode}}">
               <option value="CTRL_F">CTRL + F</option>
               <option value="O_ONLY">O</option>
             </select>
